syntax = "proto3";

option go_package = "github.com/hyperxpizza/rpiCli/grpc";

service CommandService {
    rpc ExecuteCommand(ExecuteCommandRequest) returns (ExecuteCommandResponse) {}
}

message ExecuteCommandRequest {
    string command = 1;
}

message ExecuteCommandResponse{
    string response = 1;
    Error error = 2;
}

message Error {
    string code = 1;
    string message = 2;
}
  